#5: Fixed image alignment function in blog.

--- a/app/stylesheets/common.sass
+++ b/app/stylesheets/common.sass
@@ -150,3 +150,17 @@ a
 .show#pages
   .content#show
     padding: 0
+
+.text-align-left
+  margin: 0 !important
+
+.text-align-center
+  text-align: center !important
+
+.image-align-right
+  float: right !important
+  margin: 0 5px 20px !important
+
+.image-align-left
+  float: left !important
+  margin: 0 0 20px !important
