--- a/app/stylesheets/pages/base.sass
+++ b/app/stylesheets/pages/base.sass
@@ -2,8 +2,6 @@
 
 #pages
   +grid-container
-  iframe
-    display: none
 
   .text-align-right
     margin: 0 !important
